--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 
 language: go
+sudo: false
 
 go:
-  - 1.1
   - 1.4
   - 1.5
+  - tip
 
 install: make get-deps
 
-script: make build test
+script:
+  - make build test
+  - ./involucro -h
+
+matrix:
+  allow_failures:
+    - go: tip
