Also pull parent images for wrapping

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -3,7 +3,8 @@ all: 01 02
 
 
 01:
-	./01_compile_and_run.sh
+	./01_compile_and_run_images_present.sh
+	./01_compile_and_run_images_not_present.sh
 
 02:
 	./02_hello_world.sh
