Failing Integration Test
[skip ci]

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06
+all: 01 02 03 04 06 12
 
 
 01:
@@ -17,3 +17,6 @@ all: 01 02 03 04 06
 
 06:
 	./06_timing.sh
+
+12:
+	./12_runtask.sh
