Provide image config as extra option for wrapping

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 15
+all: 01 02 03 04 06 12 14 15
 
 
 01:
@@ -20,6 +20,9 @@ all: 01 02 03 04 06 12 15
 
 12:
 	./12_runtask.sh
+
+14:
+	./14_wrapoptions.sh
 
 15:
 	./15_nested_dirs.sh
