Fix incorrect path flattening bug

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12
+all: 01 02 03 04 06 12 15
 
 
 01:
@@ -20,3 +20,6 @@ all: 01 02 03 04 06 12
 
 12:
 	./12_runtask.sh
+
+15:
+	./15_nested_dirs.sh
