Generate config for run earlier, allow it to overwritten

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15
+all: 01 02 03 04 06 12 14 15 17
 
 
 01:
@@ -26,3 +26,6 @@ all: 01 02 03 04 06 12 14 15
 
 15:
 	./15_nested_dirs.sh
+
+17:
+	./17_runoptions.sh
