Integration test for building from scratch

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15 17
+all: 01 02 03 04 06 12 14 15 16 17
 
 
 01:
@@ -29,3 +29,6 @@ all: 01 02 03 04 06 12 14 15 17
 
 17:
 	./17_runoptions.sh
+
+16:
+	./16_from_scratch.sh
