Integration test: Handle tags

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15 16 17
+all: 01 02 03 04 06 12 14 15 16 17 20
 
 
 01:
@@ -32,3 +32,6 @@ all: 01 02 03 04 06 12 14 15 16 17
 
 16:
 	./16_from_scratch.sh
+
+20:
+	./20_tags.sh
