Allow reading of environment variables in Invfile

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15 16 17 20 21
+all: 01 02 03 04 06 12 14 15 16 17 20 21 23
 
 01:
 	./01_autopull.sh
@@ -37,3 +37,6 @@ all: 01 02 03 04 06 12 14 15 16 17 20 21
 
 21:
 	./21_flexible_mount_dir.sh
+
+23:
+	./23_env_in_invfile.sh
