--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15 16 17 20 21 23
+all: 01 02 03 04 06 12 14 15 16 17 20 21 23 26
 
 01:
 	./01_autopull.sh
@@ -40,3 +40,6 @@ all: 01 02 03 04 06 12 14 15 16 17 20 21 23
 
 23:
 	./23_env_in_invfile.sh
+
+26:
+	./26_correctly_handle_files.sh
