Add integration test

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 12 14 15 16 17 20 21 23 26 27
+all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27
 
 01:
 	./01_autopull.sh
@@ -16,6 +16,9 @@ all: 01 02 03 04 06 12 14 15 16 17 20 21 23 26 27
 
 06:
 	./06_timing.sh
+
+09:
+	./09_remote_docker.sh
 
 12:
 	./12_runtask.sh
