Literate mode for invfiles
Support invfile.lua that are written in Markdown, with code in bird
tracks.

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27
+all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31
 
 01:
 	./01_autopull.sh
@@ -49,3 +49,6 @@ all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27
 
 27:
 	./27_values_from_cli.sh
+
+31:
+	./31_literate_mode.sh
