Add Integration Test

--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31
+all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31 32
 
 01:
 	./01_autopull.sh
@@ -52,3 +52,6 @@ all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31
 
 31:
 	./31_literate_mode.sh
+
+32:
+	./32_task_list.bats
