--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,5 +1,5 @@
 
-all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31 32
+all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 bats
 
 01:
 	./01_autopull.sh
@@ -50,8 +50,5 @@ all: 01 02 03 04 06 09 12 14 15 16 17 20 21 23 26 27 31 32
 27:
 	./27_values_from_cli.sh
 
-31:
-	./31_literate_mode.sh
-
-32:
-	./32_task_list.bats
+bats:
+	@bats .
