--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,12 +1,9 @@
 
-all: 01 02 03 04 06 09 12 14 15 17 bats
+all: 01 02 04 06 09 12 14 15 17 bats
 
 01:
 	./01_autopull.sh
 	./01_compile_and_run.sh
-
-03:
-	./03_expectations.sh
 
 02:
 	./02_hello_world.sh
