--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,14 +1,11 @@
 
-all: 04 06 12 14 15 17 bats
+all: 04 06 14 15 17 bats
 
 04:
 	./04_parameters.sh
 
 06:
 	./06_timing.sh
-
-12:
-	./12_runtask.sh
 
 14:
 	./14_wrapoptions.sh
