--- a/integrationtest/Makefile
+++ b/integrationtest/Makefile
@@ -1,14 +1,11 @@
 
-all: 04 06 14 17 bats
+all: 04 06 17 bats
 
 04:
 	./04_parameters.sh
 
 06:
 	./06_timing.sh
-
-14:
-	./14_wrapoptions.sh
 
 17:
 	./17_runoptions.sh
