--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ before_install:
 install:
   - wget https://test.docker.com/builds/Linux/x86_64/docker-$DOCKER_VERSION -O docker
   - chmod +x docker
-  - sudo ./docker daemon &
+  - sudo ./docker daemon --log-level=fatal &
+  - go get github.com/golang/lint/golint
   - go get ./...
 
 script:
+  - go vet ./...
+  - $GOPATH/bin/golint ./...
   - make -j3 build build-win64 build-win32
   - ./involucro --set REPO=involucro/tool --set TAG=latest wrap-yourself
   - go test -v ./runtime
