--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,9 @@ deploy:
     on:
       condition: $DOCKER_VERSION=latest
 
+notifications:
+  irc: "chat.freenode.net#involucro"
+
 env:
   - DOCKER_VERSION=1.9.1
   - DOCKER_VERSION=1.8.3
