--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.0.{build}-beta
+version: {build}
 
 environment:
   TIMEOUT: "5m"
@@ -12,12 +12,12 @@ platform:
 clone_folder: C:\gopath\src\github.com\thriqon\involucro
 
 install:
+  - git submodule update --init --recursive
   - go get -u github.com/jstemmer/go-junit-report
   - go get -u github.com/josephspurrier/goversioninfo/cmd/goversioninfo
   - ps: C:\gopath\bin\goversioninfo "-product-version=$(git describe)"
 
 build_script:
-  - go get ./...
   - ps: |
         go build -o involucro.exe -ldflags "-s -w -X github.com/thriqon/involucro/app.version=$(git describe)" ./cmd/involucro ;
         ./involucro.exe --version
