--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,6 @@ install:
       chmod +x docker
       sudo ./docker daemon --log-level=fatal &
     fi
-  # Fetch golint
-  - |
-    if [[ "$MODE" == "unit" ]]; then
-      go get github.com/golang/lint/golint
-    fi
 
 before_script:
   - |
@@ -50,13 +45,8 @@ before_script:
     fi
 
 script:
-  - |
-    PKGS="./internal/... ./auth"
-    if [[ "$MODE" == "unit" ]]; then
-      go vet $PKGS
-      $GOPATH/bin/golint $PKGS
-      go test -v -short $PKGS
-    fi
+  - PKGS="./internal/... ./auth"
+  - if [[ "$MODE" == "unit" ]]; then go test -v -short $PKGS ; fi
   - |
     if [[ "$MODE" == "windows-build" ]]; then
       go get -u github.com/josephspurrier/goversioninfo/cmd/goversioninfo
@@ -70,7 +60,6 @@ script:
       ./$FILENAME --version
     fi
   - |
-    PKGS="./internal/... ./auth"
     if [[ "$MODE" == "integration" ]]; then
       ./$FILENAME wrap-yourself
       go test -v $PKGS
