--- a/.travis.yml
+++ b/.travis.yml
@@ -52,11 +52,11 @@ script:
       go get -u github.com/josephspurrier/goversioninfo/cmd/goversioninfo
 
       $GOPATH/bin/goversioninfo "-product-version=$(git describe)"
-      CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o involucro.exe -ldflags "-s -w -X github.com/thriqon/involucro/app.version=$(git describe)" ./cmd/involucro
-      CGO_ENABLED=0 GOOS=windows GOARCH=386 go build -o involucro32.exe -ldflags "-s -w -X github.com/thriqon/involucro/app.version=$(git describe)" ./cmd/involucro
+      CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o involucro.exe -ldflags "-s -w -X github.com/involucro/involucro/app.version=$(git describe)" ./cmd/involucro
+      CGO_ENABLED=0 GOOS=windows GOARCH=386 go build -o involucro32.exe -ldflags "-s -w -X github.com/involucro/involucro/app.version=$(git describe)" ./cmd/involucro
       file involucro.exe involucro32.exe
     else
-      CGO_ENABLED=0 go build -o $FILENAME -ldflags "-s -w -X github.com/thriqon/involucro/app.version=$(git describe)" ./cmd/involucro
+      CGO_ENABLED=0 go build -o $FILENAME -ldflags "-s -w -X github.com/involucro/involucro/app.version=$(git describe)" ./cmd/involucro
       ./$FILENAME --version
     fi
   - |
@@ -74,7 +74,7 @@ deploy:
       - involucro
     on:
       tags: true
-      repo: thriqon/involucro
+      repo: involucro/involucro
       condition: $MODE = unit && $TRAVIS_OS_NAME = linux
 
   - provider: releases
@@ -85,7 +85,7 @@ deploy:
       - involucro.darwin
     on:
       tags: true
-      repo: thriqon/involucro
+      repo: involucro/involucro
       condition: $MODE = unit && $TRAVIS_OS_NAME = osx
 
   - provider: releases
@@ -97,7 +97,7 @@ deploy:
       - involucro.exe
     on:
       tags: true
-      repo: thriqon/involucro
+      repo: involucro/involucro
       condition: $MODE = windows-build
 
   - provider: script
