--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,14 @@ matrix:
       env: MODE=unit FILENAME=involucro.darwin
     - os: linux
       sudo: required
+      env: MODE=integration DOCKER_VERSION=1.11.2 FILENAME=involucro
+      services: [docker]
+    - os: linux
+      sudo: required
+      env: MODE=integration DOCKER_VERSION=1.10.3 FILENAME=involucro
+      services: [docker]
+    - os: linux
+      sudo: required
       env: MODE=integration DOCKER_VERSION=1.9.1 FILENAME=involucro
       services: [docker]
     - os: linux
