Fix travis.yml ?

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ install:
       sudo ./docker daemon --log-level=fatal &
     fi
 
-before_script:
-  - test "x$TRAVIS_SECURE_ENV_VARS" = "xtrue" ] && echo '{"auths": ["'${HUB_TOKEN}'"]}' > ~/.involucro
+before_script: |
+  test "x$TRAVIS_SECURE_ENV_VARS" = "xtrue" ] && echo '{"auths": ["'${HUB_TOKEN}'"]}' > ~/.involucro
 
 script:
   - PKGS="./internal/... ./auth"
