No need to chmod unpacked docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,7 @@ install:
     if [[ "$MODE" == "integration" ]]; then
       sudo service docker stop && \
       wget https://get.docker.com/builds/Linux/x86_64/docker-$DOCKER_VERSION.tgz && \
-      tar xvf docker-$DOCKER_VERSION.tgz --strip-components=3  && \
-      chmod +x docker || exit 2
+      tar xvf docker-$DOCKER_VERSION.tgz --strip-components=3 || exit 2
       sudo ./$EXECUTABLE daemon --log-level=fatal &
     fi
 
