Drop fewer components

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,23 @@ matrix:
       env: MODE=unit FILENAME=involucro.darwin
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.12.1 EXECUTABLE=dockerd FILENAME=involucro LATEST=1
+      env: MODE=integration DOCKER_VERSION=1.12.1 EXECUTABLE=dockerd DROP=1 FILENAME=involucro LATEST=1
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.11.2 EXECUTABLE=dockerd FILENAME=involucro
+      env: MODE=integration DOCKER_VERSION=1.11.2 EXECUTABLE=dockerd DROP=1 FILENAME=involucro
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.10.3 EXECUTABLE=docker FILENAME=involucro
+      env: MODE=integration DOCKER_VERSION=1.10.3 EXECUTABLE=docker DROP=3 FILENAME=involucro
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.9.1 EXECUTABLE=docker FILENAME=involucro
+      env: MODE=integration DOCKER_VERSION=1.9.1 EXECUTABLE=docker DROP=3 FILENAME=involucro
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.8.3 EXECUTABLE=docker FILENAME=involucro
+      env: MODE=integration DOCKER_VERSION=1.8.3 EXECUTABLE=docker DROP=3 FILENAME=involucro
       services: [docker]
     - os: linux
       env: MODE=windows-build
@@ -42,7 +42,7 @@ install:
     if [[ "$MODE" == "integration" ]]; then
       sudo service docker stop && \
       wget https://get.docker.com/builds/Linux/x86_64/docker-$DOCKER_VERSION.tgz && \
-      tar xvf docker-$DOCKER_VERSION.tgz --strip-components=3 || exit 2
+      tar xvf docker-$DOCKER_VERSION.tgz --strip-components=$DROP || exit 2
       sudo ./$EXECUTABLE daemon --log-level=fatal &
     fi
 
