Improve Travis build (#60)
* Enforce tests are run

* It's tgz, not tar.gz

* fix tar xvf

* configure docker daemon filename

* Use dockerd on newer Docker versions

* No need to chmod unpacked docker

* Drop fewer components

* Increment DROP variable

* Use Docker install script

* Use curl instead of wget

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,15 @@ matrix:
       env: MODE=unit FILENAME=involucro.darwin
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.12.1 FILENAME=involucro LATEST=1
+      env: MODE=integration SOURCE=get.docker.com FILENAME=involucro LATEST=1
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.11.2 FILENAME=involucro
+      env: MODE=integration SOURCE=test.docker.com FILENAME=involucro
       services: [docker]
     - os: linux
       sudo: required
-      env: MODE=integration DOCKER_VERSION=1.10.3 FILENAME=involucro
-      services: [docker]
-    - os: linux
-      sudo: required
-      env: MODE=integration DOCKER_VERSION=1.9.1 FILENAME=involucro
-      services: [docker]
-    - os: linux
-      sudo: required
-      env: MODE=integration DOCKER_VERSION=1.8.3 FILENAME=involucro
+      env: MODE=integration SOURCE=experimental.docker.com FILENAME=involucro
       services: [docker]
     - os: linux
       env: MODE=windows-build
@@ -40,11 +32,7 @@ install:
   # Replace existing Docker with specific version
   - |
     if [[ "$MODE" == "integration" ]]; then
-      sudo service docker stop && \
-      wget https://get.docker.com/builds/Linux/x86_64/docker-$DOCKER_VERSION.tar.gz && \
-      tar xvf --strip=3 docker-$DOCKER_VERSION.tar.gz && \
-      chmod +x docker && \
-      sudo ./docker daemon --log-level=fatal &
+      curl https://$SOURCE/ | sudo sh
     fi
 
 before_script: |
@@ -67,8 +55,7 @@ script:
     fi
   - |
     if [[ "$MODE" == "integration" ]]; then
-      ./$FILENAME wrap-yourself
-      go test -v $PKGS
+      ./$FILENAME wrap-yourself && go test -v $PKGS
     fi
 
 deploy:
